<resources>
    <string name="app_label_name">PSI</string>
    <string name="app_name">Parrish Investments</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_refresh">Refresh</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="item_delete">Delete</string>
    <string name="lookup_hint">Enter Symbol To Search</string>
    <string name="search_more">MORE</string>

    <string name="empty_symbols">No symbols, add some!</string>

    <string name="day_range_label">Day Range</string>
    <string name="open_label">Open</string>
    <string name="volume_label">Volume</string>
    <string name="volume_avg_label">Volume Avg.</string>
    <string name="previous_close_label">Prev Close</string>
    <string name="year_range_label">52 Week Range</string>

    Volume

</resources>
